--- a/index1.html
+++ b/index1.html
@@ -34,9 +34,24 @@
             {{post.title}}
           </span>
         </span>
-        <span>
-          <a href="#/posts/{{$index}}">Comments</a>
-        </span>
+        <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
+          <span class="glyphicon glyphicon-thumbs-up"
+            ng-click="incrementUpvotes(comment)"></span>
+          {{comment.upvotes}} - by {{comment.author}}
+          <span style="font-size:20px; margin-left:10px;">
+            {{comment.body}}
+          </span>
+        </div>
+
+        <form ng-submit="addComment()" style="margin-top:30px;">
+          <h3>Add a new comment</h3>
+          <div class="form-group">
+            <input type="text" class="form-control"
+              placeholder="Comment" ng-model="body"></input>
+          </div>
+          <button type="submit" class="btn btn-primary">Post</button>
+        </form>
+
       </div>
 
       <form ng-submit="addPost()"
